# damodaran

./: .env.example  .gitignore  CONTEXT.md  README.md  pyproject.toml
.claude/workflows/: build-bot.mjs
config/presets/: damodaran_value.yaml  deep_value.yaml  qarp.yaml
docs/adr/: 0001-use-duckdb.md  0002-sec-edgar-first-fmp-later.md  0003-client-portal-api-over-tws.md  0004-fx-source-ecb.md
docs/superpowers/plans/: 2026-05-25-m1-skeleton-damodaran-sec-edgar.md
docs/superpowers/specs/: 2026-05-25-investment-bot-design.md
src/bot/: cli.py  config.py
src/bot/data/: universe.csv
src/bot/ingest/: base.py  damodaran.py  fmp.py  fx.py  ibkr.py  refresh.py  sec_edgar.py  universe.py  universe_default.csv
src/bot/portfolio/: __init__.py  command.py  events.py  report.py  sync.py  trades.py
src/bot/reporting/: analysis_report.py  html.py  screen_report.py  show.py
src/bot/reporting/templates/: alerts.md.j2  analysis.md.j2  portfolio.md.j2
src/bot/screener/: __init__.py  benchmarks.py  config.py  engine.py  persist.py  ranking.py  reports.py  rules.py  trap_rules.py  types.py
src/bot/storage/: db.py  schema.sql
src/bot/utils/: finance.py  fx.py  logging.py
src/bot/valuator/: __init__.py  analysis.py  assumptions.py  dcf.py  narrative_flags.py  sensitivity.py  story_types.py
tests/: conftest.py
tests/fixtures/cassettes/fmp/: test_available_exchanges.yaml  test_fetch_historical_fx_returns_rows.yaml  test_fetch_historical_prices_returns_rows.yaml  test_import_company_from_fmp_aapl.yaml  test_import_company_from_fmp_nesn_sw.yaml  test_import_company_from_fmp_non_us_has_local_currency.yaml  test_import_company_from_fmp_us_populates_db.yaml  test_import_prices_populates_table.yaml  test_lookup_company_7203_t.yaml  test_lookup_company_aapl.yaml  test_lookup_company_invalid_api_key_raises.yaml  test_lookup_company_japan.yaml  test_lookup_company_nesn_sw.yaml  test_lookup_company_switzerland.yaml  test_lookup_company_unknown_returns_none.yaml  test_lookup_company_us.yaml  test_second_run_is_incremental_zero_inserts.yaml
tests/fixtures/cassettes/fx/: test_eur_usd_rate_at_known_date.yaml
tests/fixtures/cassettes/prices/: test_import_prices_aapl_inserts_rows.yaml  test_import_prices_second_run_inserts_zero.yaml  test_import_prices_second_run_refreshes_recent_window.yaml
tests/fixtures/cassettes/refresh/: aapl.yaml  amzn.yaml  googl.yaml  msft.yaml  tsla.yaml
tests/fixtures/cassettes/sec_edgar/: test_fetch_company_facts_returns_json.yaml  test_import_company_from_sec_populates_db.yaml  test_lookup_cik_for_known_ticker.yaml  test_lookup_cik_unknown_returns_none.yaml
tests/fixtures/cassettes/universe/: AAPL.yaml  MSFT.yaml  NESN.SW.yaml  NVDA.yaml  SAP.DE.yaml
tests/fixtures/damodaran/: ctryprem_sample.xls  wacc_sample.xls
tests/integration/: test_damodaran_import.py  test_fmp_client.py  test_fmp_import.py  test_fmp_importer.py  test_fmp_prices.py  test_fx_import.py  test_portfolio_command.py  test_portfolio_events.py  test_prices_import.py  test_refresh.py  test_screen.py  test_screen_cli.py  test_sec_edgar_client.py  test_sec_edgar_import.py  test_universe_refresh.py
tests/unit/: test_additional_presets.py  test_cli.py  test_cli_analyze.py  test_cli_doctor.py  test_cli_portfolio.py  test_cli_refresh.py  test_cli_refresh_fmp.py  test_cli_show.py  test_cli_status.py  test_config.py  test_damodaran_importer.py  test_damodaran_parser.py  test_fmp_client.py  test_fmp_parser.py  test_fx.py  test_fx_refresh.py  test_ibkr_client.py  test_ingest_base.py  test_logging.py  test_portfolio_events.py  test_portfolio_report.py  test_portfolio_sync.py  test_prices_refresh.py  test_ranking.py  test_reporting_analysis.py  test_reporting_html.py  test_reporting_screen.py  test_reporting_show.py  test_screener_config.py  test_screener_engine.py  test_screener_extra_presets.py  test_screener_persist.py  test_screener_quality_gates.py  test_screener_ranking.py  test_screener_rules.py  test_screener_trap_detection.py  test_screener_value_indicators.py  test_sec_edgar_importer.py  test_sec_edgar_parser.py  test_storage_db.py  (+10 more)
