[project]
name = "bot"
version = "0.1.0"
description = "Personal investment bot — value screener + portfolio monitor"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "duckdb>=1.1",
    "polars>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "rich>=13.7",
    "pyyaml>=6.0.3",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.9",
    "markdown>=3.10.2",
    "plotly>=6.7.0",
]

[project.scripts]
bot = "bot.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-vcr>=1.0.2",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-openpyxl",
    "types-pyyaml>=6.0.12.20260518",
    "types-markdown>=3.10.2.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]

[tool.hatch.build.targets.wheel.force-include]
"src/bot/storage/schema.sql" = "bot/storage/schema.sql"
"src/bot/ingest/universe_default.csv" = "bot/ingest/universe_default.csv"
"src/bot/reporting/templates/analysis.md.j2" = "bot/reporting/templates/analysis.md.j2"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "RUF", "SIM", "TID"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
packages = ["bot"]

# Plotly ships no py.typed marker and the third-party stubs are immature, so treat
# its imports as untyped; the one call site (reporting/html.py) coerces the result.
[[tool.mypy.overrides]]
module = ["plotly.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "integration: tests that hit external services (use VCR cassettes)",
]
